--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
   <header>
     <%= render "shared/navbar" %>
   </header>
+    <div class="main-layout col-md-10 col-lg-12">
     <%= render "shared/flashes" %>
-    <div class="content container px-3 pb-1 col-md-10 col-lg-12">
       <%= yield %>
     </div>
   </body>
