--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -1,7 +1,12 @@
 <% if notice %>
   <div class="alert alert-success alert-dismissible fade show" role="alert">
     <%= notice %>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+    <button
+      type="button"
+      class="btn-close"
+      data-bs-dismiss="alert"
+      aria-label="Close"
+    >
     </button>
   </div>
 <% end %>
@@ -9,7 +14,12 @@
 <% if alert %>
   <div class="alert alert-warning alert-dismissible fade show" role="alert">
     <%= alert %>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+    <button
+      type="button"
+      class="btn-close"
+      data-bs-dismiss="alert"
+      aria-label="Close"
+    >
     </button>
   </div>
 <% end %>
@@ -17,7 +27,12 @@
 <% if flash[:error] %>
   <div class="alert alert-danger alert-dismissible fade show" role="alert">
     <%= flash[:error] %>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+    <button
+      type="button"
+      class="btn-close"
+      data-bs-dismiss="alert"
+      aria-label="Close"
+    >
     </button>
   </div>
 <% end %>
