--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,14 +1,16 @@
 <%= notice %>
-<div class="card">
+<div>
   <%= render @appointment %>
-
-  <div class="mt-1">
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item"><%= link_to t(".back_to_appointments"), appointments_path%></li>
-      <li class="list-group-item"><%= button_to t(".delete_appointment"), @appointment,
-                                                                            method: :delete,
-                                                                            class: "btn btn-danger",
-                                                                            title: t(".delete") %></li>
-    </ul>
-  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item bg-transparent">
+      <%= link_to t(".back_to_appointments"),
+      appointments_path,
+      class: "btn btn-secondary" %>
+    </li>
+    <li class="list-group-item bg-transparent"><%= button_to t(".delete_appointment"),
+      @appointment,
+      method: :delete,
+      class: "btn btn-danger",
+      title: t(".delete") %></li>
+  </ul>
 </div>
