--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h4 class="mb-3 fw-normal"><%= t(".title") %></h4>
+<h4 class="fw-normal mt-4"><%= t(".title") %></h4>
 
 <%= button_to omniauth_authorize_path(resource_name, 'google_oauth2'), class: "btn btn-google", data: { turbo: false } do %>
   <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" width="20" height="20" class="d-inline-block align-top" alt="Google logo">
