add feedback through email

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,7 +27,7 @@
       </div>
       <div class="col-12 p-2">
         <div class="card border-dark">
-          <a href="#" class="btn btn-light">
+          <a href="mailto:aleks.vangjelofski@gmail.com?subject=Feedback%20for%20the%20Calcometer%20app" class="btn btn-light">
             <h2><%= t(".share_feedback") %></h2>
           </a>
         </div>
