--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -7,9 +7,11 @@
       appointments_path,
       class: "btn btn-secondary" %>
     </li>
-    <li class="list-group-item bg-transparent"><%= button_to t(".delete_appointment"),
+    <li class="list-group-item bg-transparent">
+      <%= button_to t(".delete_appointment"),
       @appointment,
       method: :delete,
+      data: {turbo_confirm: t(".confirm_delete")},
       class: "btn btn-danger",
       title: t(".delete") %></li>
   </ul>
