--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -29,19 +29,17 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Update", class: "btn btn-primary" %>
+    <%= f.button :submit, t(".update"), class: "btn btn-primary" %>
   </div>
 <% end %>
-<br>
-<%= button_to "Home", root_path, method: :get, class: "btn btn-secondary" %>
 <br>
 
 <div>
   <h6><%= t(".delete_account") %></h5>
-  <%= button_to "Delete my account",
+  <%= button_to t(".delete_account_button"),
   registration_path(resource_name),
-  data: { confirm: "Are you sure?",
-  turbo_confirm: "Are you sure?" },
+  data: { turbo_confirm: t(".confirm_delete") },
   method: :delete,
-  class: "btn btn-danger mb-2" %>
+  class: "btn btn-danger mb-2",
+  style: "width: 100%" %>
 </div>
