replace home button with a friendlier 'hello #{username}' option

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,7 @@
   "
 >
   <div class="container-fluid">
-    <a href="/" class="navbar-brand"><strong><%= t(".home") %></strong></a>
+    <a href="/" class="navbar-brand"><strong><%= t(".home", username: current_user.first_name) %></strong></a>
     <button
       class="navbar-toggler text-dark"
       type="button"
