fixed existing distance and duration not displayed in daily_index

--- a/app/views/appointments/daily_index.html.erb
+++ b/app/views/appointments/daily_index.html.erb
@@ -17,10 +17,10 @@ class: "btn btn-primary mb-3" %>
       <div class="col-md-6">
         <div class="d-flex justify-content-around">
           <div id="driving_distance">
-            <%= t(".driving_distance", driving_distance: @driving_distance) %>
+            <%= t(".driving_distance", driving_distance: @total_distance) %>
           </div>
           <div id="driving_duration">
-            <%= t(".driving_duration", driving_duration: @driving_duration) %>
+            <%= t(".driving_duration", driving_duration: @total_duration) %>
           </div>
         </div>
       </div>
