--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="container mt-5">
     <h1><%= t(".greeting", name: current_user.first_name) %> 👋</h1>
     <br>
-    <h3><%= t(".today", date: l(Time.new, format: :long)) %></h3>
+    <h3><%= t(".today", date: l(Time.current.localtime, format: :long)) %></h3>
     <div class="row p-1">
       <div class="col-12 p-2">
         <div class="card">
