--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="container mt-5">
     <h1><%= t(".greeting", name: current_user.first_name) %> 👋</h1>
     <br>
-    <h3><%= t(".today", date: l(Time.current.localtime, format: :long)) %></h3>
+    <h3><%= t(".today", date: l(Date.current.in_time_zone(current_user.time_zone).to_date, format: :long_without_time)) %></h3>
     <div class="row p-1">
       <div class="col-12 p-2">
         <div class="card">
@@ -34,79 +34,82 @@
       </div>
     </div>
   </div>
+  <footer class="fixed-bottom border-top border-dark footer-css">
+    <h4 class="d-flex justify-content-around">Made with ❤️‍🔥 by Aleks in Zurich 🇨🇭</h4>
+  </footer>
 
 <% else %>
 
-  <div class="px-4 pt-3 text-center border-bottom">
+  <div class="px-4 pt-3 pb-5 text-center border-bottom">
     <h1 class="display-4 fw-bold text-body-emphasis"><%= t('.calcometer') %></h1>
     <h4 class="lead pt-3 pb-3"><%= t('.manage_ease') %></h4>
+    <div class="container" id="icon-grid">
+      <h2 class="pb-5"><%= t('.why_calcometer') %></h2>
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
+            <%= render inline: Rails.root.join('public/speedometer.svg').read %>
+          </svg>
+          <div>
+            <h3 class="fw-bold mb-0 fs-4"><%= t('.distance_management') %></h3>
+            <p><%= t('.distance_management_desc') %></p>
+          </div>
+        </div>
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
+            <%= render inline: Rails.root.join('public/safe.svg').read %>
+          </svg>
+          <div>
+            <h3 class="fw-bold mb-0 fs-4"><%= t('.safe_by_design') %></h3>
+            <p><%= t('.safe_by_design_desc') %></p>
+          </div>
+        </div>
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
+            <%= render inline: Rails.root.join('public/magic.svg').read %>
+          </svg>
+          <div>
+            <h3 class="fw-bold mb-0 fs-4"><%= t('.clutter_free_design') %></h3>
+            <p><%= t('.clutter_free_design_desc') %></p>
+          </div>
+        </div>
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
+            <%= render inline: Rails.root.join('public/peace.svg').read %>
+          </svg>
+          <div>
+            <h3 class="fw-bold mb-0 fs-4"><%= t('.peace_of_mind') %></h3>
+            <p><%= t('.peace_of_mind_desc') %></p>
+          </div>
+        </div>
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
+            <%= render inline: Rails.root.join('public/person-bounding-box.svg').read %>
+          </svg>
+          <div>
+            <h3 class="fw-bold mb-0 fs-4"><%= t('.patient_tracker') %></h3>
+            <p><%= t('.patient_tracker_desc') %></p>
+          </div>
+        </div>
+        <div class="col d-flex align-items-start">
+          <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
+            <%= render inline: Rails.root.join('public/phone.svg').read %>
+          </svg>
+          <div>
+            <h3 class="fw-bold mb-0 fs-4"><%= t('.mobile_first_approach') %></h3>
+            <p><%= t('.mobile_first_approach_desc') %></p>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="col-lg-6 mx-auto">
       <div class="d-grid gap-2 mb-5">
         <li class="nav-item nav-link"><%= link_to t('.log_in'), new_user_session_path(locale: I18n.locale), class: "btn btn-outline-dark" %></li>
         <li class="nav-item nav-link"><%= link_to t('.sign_up'), new_user_registration_path(locale: I18n.locale), class: "btn btn-primary" %></li>
       </div>
     </div>
-    <div>
-      <div class="container" id="icon-grid">
-        <h2 class="pb-5"><%= t('.why_calcometer') %></h2>
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 g-4">
-          <div class="col d-flex align-items-start">
-            <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-              <%= render inline: Rails.root.join('public/speedometer.svg').read %>
-            </svg>
-            <div>
-              <h3 class="fw-bold mb-0 fs-4"><%= t('.distance_management') %></h3>
-              <p><%= t('.distance_management_desc') %></p>
-            </div>
-          </div>
-          <div class="col d-flex align-items-start">
-            <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-              <%= render inline: Rails.root.join('public/safe.svg').read %>
-            </svg>
-            <div>
-              <h3 class="fw-bold mb-0 fs-4"><%= t('.safe_by_design') %></h3>
-              <p><%= t('.safe_by_design_desc') %></p>
-            </div>
-          </div>
-          <div class="col d-flex align-items-start">
-            <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-              <%= render inline: Rails.root.join('public/magic.svg').read %>
-            </svg>
-            <div>
-              <h3 class="fw-bold mb-0 fs-4"><%= t('.clutter_free_design') %></h3>
-              <p><%= t('.clutter_free_design_desc') %></p>
-            </div>
-          </div>
-          <div class="col d-flex align-items-start">
-            <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-              <%= render inline: Rails.root.join('public/peace.svg').read %>
-            </svg>
-            <div>
-              <h3 class="fw-bold mb-0 fs-4"><%= t('.peace_of_mind') %></h3>
-              <p><%= t('.peace_of_mind_desc') %></p>
-            </div>
-          </div>
-          <div class="col d-flex align-items-start">
-            <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-              <%= render inline: Rails.root.join('public/person-bounding-box.svg').read %>
-            </svg>
-            <div>
-              <h3 class="fw-bold mb-0 fs-4"><%= t('.patient_tracker') %></h3>
-              <p><%= t('.patient_tracker_desc') %></p>
-            </div>
-          </div>
-          <div class="col d-flex align-items-start">
-            <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-              <%= render inline: Rails.root.join('public/phone.svg').read %>
-            </svg>
-            <div>
-              <h3 class="fw-bold mb-0 fs-4"><%= t('.mobile_first_approach') %></h3>
-              <p><%= t('.mobile_first_approach_desc') %></p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="d-grid d-sm-flex d-md-flex justify-content-sm-center d-lg-none gap-2 mb-5">
-        <a class="btn btn-primary btn-lg px-4" href="<%= new_user_registration_path %>" role="button"><%= t('.sign_up') %></a>
-      </div>
+  </div>
+  <footer class="fixed-bottom border-top border-dark footer-css">
+    <h4 class="text-center">Made with ❤️‍🔥 by Aleks in Zurich 🇨🇭</h4>
+  </footer>
 <% end %>
