--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -51,7 +51,7 @@
         </ul>
       <% else %>
         <ul class="nav">
-          <li class="nav-item nav-link"><%= link_to t(".log_in"), new_user_session_path, class: "btn btn-outline-dark" %></li>
+          <li class="nav-item nav-link"><%= link_to t(".log_in"), new_user_session_path, class: "btn btn-outline-dark btn-light" %></li>
           <li class="nav-item nav-link"><%= link_to t(".sign_up"), new_user_registration_path, class: "btn btn-primary" %></li>
           <li class="nav-item nav-link">
             <div class="dropdown mb-1">
