not signed_in homepage restyling

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -56,12 +56,7 @@
           <li class="nav-item nav-link">
             <div class="dropdown mb-1">
               <a
-                class="
-                  dropdown-toggle
-                  text-dark
-                  form-control
-                  text-decoration-none
-                "
+                class="dropdown-toggle form-control text-decoration-none btn btn-outline-dark btn-light"
                 href="#"
                 role="button"
                 id="localeDropdown"
