--- a/app/assets/stylesheets/components/_features.scss
+++ b/app/assets/stylesheets/components/_features.scss
@@ -1,26 +1,24 @@
-.feature-icon {
-  width: 4rem;
-  height: 4rem;
-  border-radius: .75rem;
-}
-
-.icon-square {
-  width: 3rem;
-  height: 3rem;
-  border-radius: .75rem;
-}
-
-.text-shadow-1 { text-shadow: 0 .125rem .25rem rgba(0, 0, 0, .25); }
-.text-shadow-2 { text-shadow: 0 .25rem .5rem rgba(0, 0, 0, .25); }
-.text-shadow-3 { text-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .25); }
-
-.card-cover {
-  background-repeat: no-repeat;
-  background-position: center center;
+.background-image {
+  background-position: center;
   background-size: cover;
+  background-color: rgba(0, 0, 0, .5);
+  color: white;
 }
 
-.feature-icon-small {
-  width: 3rem;
-  height: 3rem;
+.background-overlay::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5); /* This is a semi-transparent black */
+  z-index: 1; /* Ensure it's above the background image, but below the content */
+  // make image rounded
+  border-radius: 5px;
+}
+
+.background-overlay > * {
+  position: relative; /* Ensure the content is above the overlay */
+  z-index: 2;
 }
