remove footer border

--- a/app/views/appointments/daily_index.html.erb
+++ b/app/views/appointments/daily_index.html.erb
@@ -7,7 +7,7 @@
     </div>
   <% end %>
 </div>
-<footer class="fixed-bottom border-top border-dark footer-css">
+<footer class="fixed-bottom footer-css">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
