--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -114,7 +114,7 @@
     </div>
   </div>
 </div>
-<footer class="fixed-bottom border-top border-dark footer-css">
+<footer class="fixed-bottom footer-css">
   <div class="text-center">
     <h6><%= t(".during_this_period") %></h6>
     <h5><strong><%= t(
