--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -34,7 +34,7 @@
       </div>
     </div>
   </div>
-  <footer class="fixed-bottom border-top border-dark footer-css">
+  <footer class="fixed-bottom footer-css">
     <h4 class="d-flex justify-content-around">Made with ❤️‍🔥 by Aleks in Zurich 🇨🇭</h4>
   </footer>
 
@@ -112,7 +112,7 @@
       </div>
     </div>
 
-    <footer class="fixed-bottom border-top border-dark footer-css">
+    <footer class="fixed-bottom footer-css">
       <h4 class="text-center">Made with ❤️‍🔥 by Aleks in Zurich 🇨🇭</h4>
     </footer>
   <% end %>
