--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar-css {
-  justify-content: space-evenly;
+  justify-content: space-around;
   background: transparent;
   position: fixed;
   top: 0;
@@ -14,8 +14,8 @@
     right: 0;
     bottom: 0;
     left: 0; // These four properties ensure the pseudo-element covers the entire navbar
-    background: rgba(255, 255, 255, 0.7); // Semi-transparent white background
-    filter: blur(5px); // Apply the blur effect
+    background: rgba(255, 255, 255, 1); // Semi-transparent white background
+    filter: blur(10px); // Apply the blur effect
     z-index: -1; // Place the blurred background behind the navbar content
   }
 
