--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,7 +31,7 @@
               >
                 <strong><%= t(".my_account", name: current_user.first_name) %></strong>
               </a>
-              <ul class="dropdown-menu dropdown-menu-end outline-dark">
+                <ul class="dropdown-menu dropdown-menu-sm-start dropdown-menu-lg-end dropdown-menu-md-end outline-dark">
                 <li>
                   <%= link_to t(".patients"), patients_path, class: "dropdown-item" %>
                 </li>
